[package]
name = "izaclone"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["from"] }
futures = "0.3.31"
ollama-rs = "0.3.1"
simple-fs = { version = "0.6.4", features = ["full"] }
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
